--- a/index.html
+++ b/index.html
@@ -12,14 +12,43 @@
 
 <body>
     <section class="landing-page grid">
-        <h1 class="title">Brilliant <br>Web Developer <br>Hamiat Nalwanga</h1>
-        <a class="contact-link" href="#contact"><i class="fas fa-address-book"></i></a>
+        <h1 class="title">Aspiring <br>Web Developer <br>Hamiat Nalwanga</h1>
+        <svg id="shape" width="121" height="145" xmlns="http://www.w3.org/2000/svg">
+            <!-- Created with Method Draw - http://github.com/duopixel/Method-Draw/ -->
+           
+            <g>
+             <title>background</title>
+             <rect fill="none" id="canvas_background" height="147" width="123" y="-1" x="-1"/>
+             <g display="none" overflow="visible" y="0" x="0" height="100%" width="100%" id="canvasGrid">
+              <rect fill="url(#gridpattern)" stroke-width="0" y="0" x="0" height="100%" width="100%"/>
+             </g>
+            </g>
+            <g>
+             <title>Layer 1</title>
+             <line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_2" y2="106.75" x2="19.74999" y1="0.75" x1="20.74999" stroke-width="1.5" stroke="#8ba8a1" fill="none"/>
+             <line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_3" y2="92.75" x2="46.74999" y1="106.75" x1="20.74999" stroke-width="1.5" stroke="#8ba8a1" fill="none"/>
+             <line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_4" y2="16.75" x2="45.74999" y1="92.75" x1="45.74999" stroke-width="1.5" stroke="#000" fill="none"/>
+             <line stroke="#000" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_6" y2="18.75" x2="102.74999" y1="16.75" x1="44.74999" stroke-width="1.5" fill="none"/>
+             <line stroke="#000" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_7" y2="143.75" x2="98.74999" y1="17.75" x1="100.74999" stroke-width="1.5" fill="none"/>
+             <line stroke="#000" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_8" y2="140.75" x2="0.74999" y1="142.75" x1="97.74999" stroke-width="1.5" fill="none"/>
+             <line stroke="#000" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_9" y2="15.75" x2="2.75" y1="139.75" x1="0.75" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
+             <line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_10" y2="0.75" x2="19.74999" y1="15.75" x1="2.74999" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
+             <line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_11" y2="2.75" x2="120.74999" y1="0.75" x1="20.74999" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
+             <line stroke="#000" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_12" y2="119.75" x2="118.74999" y1="2.75" x1="119.74999" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
+             <line stroke="#000" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_13" y2="119.75" x2="117.74999" y1="142.75" x1="98.74999" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
+             <line stroke="#000" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_14" y2="106.75" x2="74.74999" y1="106.75" x1="18.74999" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
+             <line stroke="#000" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_15" y2="35.75" x2="75.74999" y1="106.75" x1="74.74999" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
+             <line stroke="#8ba8a1" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_16" y2="19.75" x2="99.74999" y1="35.75" x1="74.74999" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" fill="none"/>
+             <line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_18" y2="92.75" x2="75.74999" y1="92.75" x1="44.74999" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
+             <line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_19" y2="34.75" x2="44.74999" y1="34.75" x1="74.74999" fill-opacity="null" stroke-opacity="null" stroke-width="1.5" stroke="#000" fill="none"/>
+            </g>
+           </svg>
         <div class="wrapper">
             <img src="assets/placeHpic.png" alt="Optical illusion">
             <img src="assets/placeHpic.png" alt="Optical illusion">
         </div>
     </section>
-    <section>
+    <section class="projects-head">
         <h2 id="my-projects">Some of my projects</h2>
         <div class="projects grid">
             <a  class="projectsImg" href=""><img src="assets/mariok.png" alt="My Mario club's Website cutout"></a>
@@ -28,13 +57,13 @@
         </div>
     </section>
     <section class="about">
-        <h2 id="about-me">About Me!</h2>
-        <p class="about-me-text">Welcome, welcome! Here's some text about me. Hire me please, I need to pay rent.</p>
+        <h2 id="about-me">About Me</h2>
+        <p class="about-me-text"><span>Welcome! Here's some text about me. Please hire me.</span></p>
     </section>
     <section id="contact">
         <h2 id="contact-me">Get in touch</h2>
         <form class="contact-form">
-            <p>Send me a message, I'll get back to you as soon as possible!</p>
+<!--             <p><span> me a message, I'll get back to you as soon as possible!</span></p> -->
             <input type="text" placeholder="Name">
             <input type="email" placeholder="Email">
             <textarea placeholder="Your message..."></textarea>
