minor css changes

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
     <section id="about">
         <h2 id="about-me">About Me</h2>
-        <p class="about-me-text"><span>Welcome to my portfolio. <br>At the moment there isn't much to see but please come back after a few months to see how much progress I've made!</span></p>
+        <p class="about-me-text"><span>Welcome to my portfolio. At the moment there isn't much to see but please come back after a few months to see how much progress I've made!</span></p>
     </section>
     <section id="contact">
         <h2 id="contact-me">Get in touch</h2>
