added link to one of the projects

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h2 id="my-projects">Some of my projects</h2>
         <div class="projects grid">
             <a href=""><img src="assets/mariok.png" alt="A thumbnail of Mario themed Website"></a>
-            <a href=""><img src="/assets/gameapp.png" alt="A thumbnail of a game I created based on the Old Mcdonald song"></a>
+            <a href="https://festive-colden-385e83.netlify.app/"><img src="/assets/gameapp.png" alt="A thumbnail of a game I created based on the Old Mcdonald song"></a>
             <a href=""><img src="assets/todolist.png" alt="A thumbnail of very simple Todo list"></a>
         </div>
     </section>
